// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Toolbar FileToolbar node 1`] = `"<div class=\\"visual-editor--file-toolbar\\"><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"saved-message saved\\">Saved!</div></div>"`;

<<<<<<< HEAD
exports[`File Toolbar FileToolbar node in visual editor 1`] = `"<div class=\\"visual-editor--file-toolbar\\"><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"saved-message \\">Saved!</div></div>"`;
=======
exports[`File Toolbar FileToolbar node in visual editor 1`] = `"<div class=\\"visual-editor--file-toolbar\\"><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"saved-message \\">Saved!</div></div>"`;

exports[`File Toolbar FileToolbar node with no nodes 1`] = `"<div class=\\"visual-editor--file-toolbar\\"><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"saved-message \\">Saved!</div></div>"`;

exports[`File Toolbar FileToolbar node with other node 1`] = `"<div class=\\"visual-editor--file-toolbar\\"><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"saved-message \\">Saved!</div></div>"`;

exports[`File Toolbar FileToolbar node with question node 1`] = `"<div class=\\"visual-editor--file-toolbar\\"><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"visual-editor--drop-down-menu\\"></div><div class=\\"saved-message \\">Saved!</div></div>"`;
>>>>>>> issue/795-editor-toolbar
